# http_wrap

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: tox.yml
scripts/: clear_caches.py
src/: request.py
src/adapters/: async_aiohttp.py
src/http_wrap/: __init__.py  configs.py  hooks.py  httpwrap.py  interfaces.py  proxies.py  proxy.py  request.py  response.py  security.py  settings.py  utils.py
src/http_wrap/adapters/: aiohttp_adapter.py  httpx_adapter.py  requests_adapter.py  sync_requests.py
src/http_wrap/async_adapters/: __init__.py  aiohttp.py
src/http_wrap/examples/: ex_aiohttp.py  ex_httpx_async.py  ex_httpx_sync.py  ex_requests.py
src/http_wrap/sync_adapters/: __init__.py  basesync.py  httpx.py  requests.py
tests/: conftest.py  test_async_request.py  test_config.py  test_headers.py  test_hhtpreq_config.py  test_httpreq_options.py  test_httpx.py  test_make_client_session.py  test_options.py  test_read_proxy.py  test_requests.py  test_response_proxy.py  test_sync_request.py
tests/adapters/: test_async_aiohttp.py  test_sync_httpx.py  test_sync_request.py
